log
In file included from inventory.h:3:0,
                 from game.h:7,
                 from game.c:3:
game_state.h:12:14: error: field ‘game_player’ has incomplete type
  struct unit game_player;
              ^
game_state.h:14:14: error: array type has incomplete element type ‘struct unit’
  struct unit npc[MAX_NPCS];
              ^
game_state.h:16:16: error: array type has incomplete element type ‘struct bullet’
  struct bullet bullet[MAX_BULLETS];
                ^
game_state.h:26:69: error: parameter 2 (‘b’) has incomplete type
 static inline void add_bullet(struct game_state * gs, struct bullet b)
                                                                     ^
game_state.h: In function ‘add_bullet’:
game_state.h:26:69: warning: unused parameter ‘b’ [-Wunused-parameter]
game_state.h: At top level:
game_state.h:41:64: error: parameter 2 (‘n’) has incomplete type
 static inline void add_npc(struct game_state * gs, struct unit n)
                                                                ^
game_state.h: In function ‘add_npc’:
game_state.h:41:64: warning: unused parameter ‘n’ [-Wunused-parameter]
make: *** [game.o] Error 1
